infra/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imsp-ingress
  namespace: imsp
  labels:
    app.kubernetes.io/name: imsp-ingress
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: imsp-platform
    app.kubernetes.io/managed-by: kustomize
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: api.imsp.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: imsp-keycloak
                port:
                  number: 8180
          - path: /
            pathType: Prefix
            backend:
              service:
                name: imsp-gateway
                port:
                  number: 8080
